--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <form action="" method="post">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name"  required><br><br>
+        <label for="email">Email</label>
+        <input type="Email"  id="email"  required><br><br>
+        <label for="gender">Gender</label>
+        <input type ="radio" name="gender" value="male" required>
+        <label for="male">Male</label> 
+        <input type ="radio"  name="gender" value="female" required>
+        <label for="female">Female</label><br> <br>
+        <label for="laptop">Laptop Brands</label>
+        <select id="laptop" name="laptop">
+          <option value="">Options</option>
+                <option value="Apple">Apple</option>
+                <option value="Asus">Asus</option>
+                <option value="HP">HP</option>
+        </select><br><br>
+        <label for="age">Age</label>
+        <input type="number" name="age" id="age" required><br><br>
+        <label for="dop">Date of Birth</label>
+        <input type="Date"  id="dop"  required><br><br>
+      <label for="password">password</label>
+      <input type="password" name="password" id="password" required><br><br>
+      <label for="portfolio">Portfolio URL</label>
+      <input type="URL" name="portfolio" id="portfolio"><br><br>
+        <button type="submit">Submit</button>
+      </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
