--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Job Application Form</h1>
 	  <form action="" method="post">
         <label for="name" class="required">Name</label>
         <input type="text" name="name" id="name"  required><br><br>
