--- a/main.html
+++ b/main.html
@@ -28,8 +28,8 @@
         </select><br><br>
         <label for="age" class="required">Age</label>
         <input type="number" name="age" id="age" required><br><br>
-        <label for="dop" class="required">Date of Birth</label>
-        <input type="Date"  id="dop"  required><br><br>
+        <label for="dob" class="required">Date of Birth</label>
+        <input type="Date"  id="dob"  required><br><br>
       <label for="password" class="required">password</label>
       <input type="password" name="password" id="password" required><br><br>
       <label for="portfolio">Portfolio URL</label>
